--- a/refs/ref.bib
+++ b/refs/ref.bib
@@ -1,3 +1,82 @@
+@book{bishop2006pattern,
+  title={Pattern Recognition and Machine Learning},
+  author={Bishop, Christopher M.},
+  year={2006},
+  publisher={Springer},
+  address={New York}
+}
+@article{dudoit-2002,
+	author = {Dudoit, Sandrine and Fridlyand, Jane},
+	journal = {Genome biology},
+	month = {6},
+	number = {7},
+	title = {{A prediction-based resampling method for estimating the number of clusters in a dataset}},
+	volume = {3},
+	year = {2002},
+	doi = {10.1186/gb-2002-3-7-research0036},
+	url = {https://doi.org/10.1186/gb-2002-3-7-research0036},
+}
+@book{hastie2009elements,
+  title={The Elements of Statistical Learning: Data Mining, Inference, and Prediction},
+  author={Hastie, Trevor and Tibshirani, Robert and Friedman, Jerome},
+  edition={2nd},
+  year={2009},
+  publisher={Springer},
+  address={New York}
+}
+
+@article{dempster1977maximum,
+  title={Maximum likelihood from incomplete data via the EM algorithm},
+  author={Dempster, A. P. and Laird, N. M. and Rubin, D. B.},
+  journal={Journal of the Royal Statistical Society: Series B (Methodological)},
+  volume={39},
+  number={1},
+  pages={1--38},
+  year={1977},
+  publisher={Wiley}
+}
+
+@article{schwarz1978estimating,
+  title={Estimating the dimension of a model},
+  author={Schwarz, Gideon E.},
+  journal={The Annals of Statistics},
+  volume={6},
+  number={2},
+  pages={461--464},
+  year={1978}
+}
+
+@article{fraley2002model,
+  title={Model-based clustering, discriminant analysis, and density estimation},
+  author={Fraley, Chris and Raftery, Adrian E.},
+  journal={Journal of the American Statistical Association},
+  volume={97},
+  number={458},
+  pages={611--631},
+  year={2002},
+  publisher={Taylor \& Francis}
+}
+
+@article{tibshirani2001estimating,
+  title={Estimating the number of clusters in a data set via the Gap statistic},
+  author={Tibshirani, R. and Walther, G. and Hastie, T.},
+  journal={Journal of the Royal Statistical Society: Series B (Statistical Methodology)},
+  volume={63},
+  number={2},
+  pages={411--423},
+  year={2001}
+}
+
+@article{calinski1974dendrite,
+  title={A dendrite method for cluster analysis},
+  author={Calinski, T. and Harabasz, J.},
+  journal={Communications in Statistics},
+  volume={3},
+  number={1},
+  pages={1--27},
+  year={1974}
+}
+
 @article{man2021,
 author = {Tudor Manole and Abbas Khalili},
 title = {{Estimating the number of components in finite mixture models via the Group-Sort-Fuse procedure}},
@@ -11,23 +90,3 @@ year = {2021},
 doi = {10.1214/21-AOS2072},
 URL = {https://doi.org/10.1214/21-AOS2072}
 }
-
-@article{fra2002,
-author = {Chris Fraley and Adrian E Raftery and},
-title = {Model-Based Clustering, Discriminant Analysis, and Density Estimation},
-journal = {Journal of the American Statistical Association},
-volume = {97},
-number = {458},
-pages = {611--631},
-year = {2002},
-publisher = {ASA Website},
-doi = {10.1198/016214502760047131},
-URL = { 
-        https://doi.org/10.1198/016214502760047131
-},
-eprint = { 
-        https://doi.org/10.1198/016214502760047131
-}
-}
-
-
