--- a/refs/ref.bib
+++ b/refs/ref.bib
@@ -5,6 +5,31 @@
   publisher={Springer},
   address={New York}
 }
+@article{Schubert2023,
+author = {Schubert, Erich},
+title = {Stop using the elbow criterion for k-means and how to choose the number of clusters instead},
+year = {2023},
+issue_date = {June 2023},
+publisher = {Association for Computing Machinery},
+address = {New York, NY, USA},
+volume = {25},
+number = {1},
+issn = {1931-0145},
+url = {https://doi.org/10.1145/3606274.3606278},
+doi = {10.1145/3606274.3606278},
+abstract = {A major challenge when using k-means clustering often is how to choose the parameter k, the number of clusters. In this letter, we want to point out that it is very easy to draw poor conclusions from a common heuristic, the "elbow method". Better alternatives have been known in literature for a long time, and we want to draw attention to some of these easy to use options, that often perform better. This letter is a call to stop using the elbow method altogether, because it severely lacks theoretic support, and we want to encourage educators to discuss the problems of the method - if introducing it in class at all - and teach alternatives instead, while researchers and reviewers should reject conclusions drawn from the elbow method.},
+journal = {SIGKDD Explor. Newsl.},
+month = jul,
+pages = {36–42},
+numpages = {7}
+}
+@misc{herdiana-2025,
+	author = {Herdiana, Indra and Kamal, M Alfin and Triyani and Estri, Mutia Nur and Renny},
+	month = {2},
+	title = {{A more precise elbow method for optimum K-means clustering}},
+	year = {2025},
+	url = {https://arxiv.org/abs/2502.00851},
+}
 @article{dudoit-2002,
 	author = {Dudoit, Sandrine and Fridlyand, Jane},
 	journal = {Genome biology},
